# a-morariu.github.io

./: .nojekyll  _config.yml  _quarto.yml  about.html  about.qmd  career.qmd  index.html  index.qmd  posts.qmd  pyproject.toml  pyroject.toml.backup  search.json  sitemap.xml  styles.scss  talks.qmd
_data/: navigation.yml
_pages/: about.md  cv.md  teaching.html
_posts/: 2199-01-01-future-post.md
_talks/: 2024-01-31-pydata-software-dev.md
_teaching/: MATH338.ipynb  MATH338.md
docs/: about.html  career.html  index.html  listings.json  posts.html  posts.xml  robots.txt  search.json  sitemap.xml  talks.html
docs/posts/2024-01-01-first-post/: index.html
docs/posts/2024-01-01-simulating-epidemics/: index.html
docs/posts/2024-07-01-simulating-epidemics/: index.html
docs/posts/2024-09-30-conditional-probs-partial-evals/: index.html
docs/posts/2025-06-27-mcmc-implementation-jax/: index.html
docs/site_libs/bootstrap/: bootstrap-5c10c33649b18b7244f73a6a064d0029.min.css  bootstrap-dark-6aa1c52aa7b7b4688874e0a2813be07e.min.css  bootstrap-dark.min.css  bootstrap.min.css
docs/talks/: index_talk_template.html
posts/: _metadata.yml
posts/2024-01-01-first-post/: index.qmd
posts/2024-01-01-simulating-epidemics/: index.qmd
posts/2024-07-01-simulating-epidemics/: index.qmd
posts/2024-07-11-git-for-phd/: index.qmd
posts/2024-09-30-conditional-probs-partial-evals/: index.qmd
posts/2025-06-27-mcmc-implementation-jax/: index.qmd
talks/: _metadata.yml  index_talk_template.qmd
talks/2024-01-31-Pydata-software-banks/: index.qmd
(+5 files in other folders)
