[tool.poetry]
name = "personal-website"
version = "0.1.0"
description = "Files for building my website with Quarto"
authors = ["Alin Morariu <36674219+A-Morariu@users.noreply.github.com>"]
readme = "README.md"
package-mode = false 

[tool.poetry.dependencies]
python = ">=3.10,<3.13.0"
numpy = ">=1.23.5,<2.0.0"
pandas = "^2.2"
matplotlib = "^3.9.2"
seaborn = "^0.13.2"
tensorflow = ">=2.16.0, <2.17.0"
tensorflow-probability = "^0.23.0"
quarto = "^0.1.0"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
