[project]
name = "personal-website"
version = "0.1.0"
description = "Files for building my website with Quarto"
authors = [
    {name = "Alin Morariu", email = "36674219+A-Morariu@users.noreply.github.com"}
]
requires-python = ">=3.10,<3.13"
dependencies = [
    "numpy>=1.23.5,<2.0.0",
    "pandas>=2.2",
    "matplotlib>=3.9.2",
    "seaborn>=0.13.2",
    "quarto>=0.1.0",
    "jupyter>=1.1.1",
    "scipy>=1.14.1",
    "gemlib>=0.13.1",
    "jax>=0.6.2,<0.7.0",
    "jaxlib>=0.4.0,<0.7.0",
    "distrax>=0.1.5",
    "tensorflow-probability[jax]>=0.24.0,<0.25.0",
]